--- a/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
@@ -970,6 +970,7 @@ EstimateScreen As screen:
                         DisabledBorderColor: =RGBA(202, 202, 202, 1)
                         DisabledFill: =RGBA(0, 0, 0, 0)
                         DisplayMode: =Parent.DisplayMode
+                        Font: =Font.Arial
                         Format: =TextFormat.Number
                         HintText: =""
                         HoverBorderColor: =Self.BorderColor
@@ -1013,6 +1014,7 @@ EstimateScreen As screen:
                         Height: =IntxtContactNumberES.Height
                         Size: =21
                         Text: ="*"
+                        VerticalAlign: =VerticalAlign.Top
                         Visible: |-
                             =//And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
                             true
@@ -1056,18 +1058,27 @@ EstimateScreen As screen:
                     Y: =8
                     ZIndex: =1
 
+                    borderCustomerContactES_1 As rectangle:
+                        BorderColor: =RGBA(237, 237, 237, 1)
+                        Fill: =RGBA(237, 237, 237, 1)
+                        Height: =Parent.Height
+                        Width: =Parent.Width-20
+                        X: =20
+                        ZIndex: =1
+
                     lblTotalEstimatedExpense As label:
                         AutoHeight: =true
+                        Color: =RGBA(0, 0, 0, 1)
                         DisabledColor: =RGBA(0, 0, 0, 1)
                         Font: =Font.Arial
                         Height: =34
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                        Text: ="Total Estimated Expense"
-                        Width: =Parent.Width - 60
+                        Text: ="Total estimated expense"
+                        Width: =Parent.Width - 120
                         Wrap: =false
-                        X: =30
+                        X: =60
                         Y: =10
-                        ZIndex: =1
+                        ZIndex: =2
 
                     IntxtTotalEstimatedExpense As text:
                         BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
@@ -1076,6 +1087,9 @@ EstimateScreen As screen:
                         DisabledColor: =RGBA(0, 0, 0, 1)
                         DisplayMode: =Parent.DisplayMode
                         Font: =Font.Arial
+                        HintText: ="Total estimated expense"
+                        HoverBorderColor: =RGBA(149, 149, 149, 1)
+                        HoverFill: =RGBA(0, 0, 0, 0)
                         MaxLength: =Parent.MaxLength
                         PaddingLeft: =5
                         RadiusBottomLeft: =0
@@ -1083,11 +1097,11 @@ EstimateScreen As screen:
                         RadiusTopLeft: =0
                         RadiusTopRight: =0
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                        Tooltip: =Parent.DisplayName
-                        Width: =Parent.Width - 60
-                        X: =30
+                        Tooltip: ="Total estimated expense"
+                        Width: =Parent.Width - 120
+                        X: =60
                         Y: =lblTotalEstimatedExpense.Y + lblTotalEstimatedExpense.Height + 5
-                        ZIndex: =2
+                        ZIndex: =3
 
                     ErrorMessagelblTotalEstimatedExpense As label:
                         AutoHeight: =true
@@ -1102,17 +1116,24 @@ EstimateScreen As screen:
                         Width: =Parent.Width - 60
                         X: =30
                         Y: =IntxtTotalEstimatedExpense.Y + IntxtTotalEstimatedExpense.Height
-                        ZIndex: =3
+                        ZIndex: =4
 
                     StarVisiblelblTotalEstimatedExpense As label:
                         Align: =Align.Center
+                        Color: =RGBA(255, 0, 0, 1)
+                        Font: =Font.Arial
                         Height: =lblTotalEstimatedExpense.Height
+                        Size: =21
                         Text: ="*"
-                        Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
+                        VerticalAlign: =VerticalAlign.Top
+                        Visible: |-
+                            =//And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
+                            true
                         Width: =30
                         Wrap: =false
+                        X: =30
                         Y: =lblTotalEstimatedExpense.Y
-                        ZIndex: =4
+                        ZIndex: =5
 
                 TotalEstimatedHoursofTravelES As typedDataCard.textualEditCard:
                     BorderColor: =RGBA(202, 202, 202, 1)
@@ -1131,18 +1152,27 @@ EstimateScreen As screen:
                     Y: =9
                     ZIndex: =1
 
+                    borderCustomerContactES_2 As rectangle:
+                        BorderColor: =RGBA(237, 237, 237, 1)
+                        Fill: =RGBA(237, 237, 237, 1)
+                        Height: =Parent.Height
+                        Width: =Parent.Width-20
+                        X: =20
+                        ZIndex: =1
+
                     lblTotalEstimatedHoursofTravel As label:
                         AutoHeight: =true
+                        Color: =RGBA(0, 0, 0, 1)
                         DisabledColor: =RGBA(0, 0, 0, 1)
                         Font: =Font.Arial
                         Height: =34
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                        Text: =Parent.DisplayName
-                        Width: =Parent.Width - 60
+                        Text: ="Total estimated hours of travel"
+                        Width: =Parent.Width - 120
                         Wrap: =false
-                        X: =30
+                        X: =60
                         Y: =10
-                        ZIndex: =1
+                        ZIndex: =2
 
                     IntxtTotalEstimatedHoursofTravel As text:
                         BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
@@ -1151,6 +1181,9 @@ EstimateScreen As screen:
                         DisabledColor: =RGBA(0, 0, 0, 1)
                         DisplayMode: =Parent.DisplayMode
                         Font: =Font.Arial
+                        HintText: ="Total estimated hours of travel"
+                        HoverBorderColor: =RGBA(149, 149, 149, 1)
+                        HoverFill: =RGBA(0, 0, 0, 0)
                         MaxLength: =Parent.MaxLength
                         PaddingLeft: =5
                         RadiusBottomLeft: =0
@@ -1158,11 +1191,11 @@ EstimateScreen As screen:
                         RadiusTopLeft: =0
                         RadiusTopRight: =0
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                        Tooltip: =Parent.DisplayName
-                        Width: =Parent.Width - 60
-                        X: =30
+                        Tooltip: ="Total estimated hours of travel"
+                        Width: =Parent.Width - 120
+                        X: =60
                         Y: =lblTotalEstimatedHoursofTravel.Y + lblTotalEstimatedHoursofTravel.Height + 5
-                        ZIndex: =2
+                        ZIndex: =3
 
                     ErrorMessageTotalEstimatedHoursofTravel As label:
                         AutoHeight: =true
@@ -1177,17 +1210,24 @@ EstimateScreen As screen:
                         Width: =Parent.Width - 60
                         X: =30
                         Y: =IntxtTotalEstimatedHoursofTravel.Y + IntxtTotalEstimatedHoursofTravel.Height
-                        ZIndex: =3
+                        ZIndex: =4
 
                     StarVisibleTotalEstimatedHoursofTravel As label:
                         Align: =Align.Center
+                        Color: =RGBA(255, 0, 0, 1)
+                        Font: =Font.Arial
                         Height: =lblTotalEstimatedHoursofTravel.Height
+                        Size: =21
                         Text: ="*"
-                        Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
+                        VerticalAlign: =VerticalAlign.Top
+                        Visible: |-
+                            =//And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
+                            true
                         Width: =30
                         Wrap: =false
+                        X: =30
                         Y: =lblTotalEstimatedHoursofTravel.Y
-                        ZIndex: =4
+                        ZIndex: =5
 
             ctnButtonES As groupContainer.verticalAutoLayoutContainer:
                 AlignInContainer: =AlignInContainer.SetByContainer
