--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -1209,8 +1209,12 @@ LeadSummaryScreen As screen:
                             Font: =Font.Arial
                             HoverBorderColor: =
                             HoverColor: =RGBA(0, 0, 0, 1)
-                            OnCheck: =Set(VarAdditionExpenseSummary,cboxAELSS.Value)
-                            OnUncheck: =Set(VarAdditionExpenseSummary,cboxAELSS.Value)
+                            OnCheck: |-
+                                =Set(VarAdditionExpenseSummary,cboxAELSS.Value);
+                                Set(VarAdditionExpense,true);Reset(IntxtTotalEstimatedExpenseLSS);
+                            OnUncheck: |-
+                                =Set(VarAdditionExpenseSummary,cboxAELSS.Value);
+                                Set(VarAdditionExpense,false);Reset(IntxtTotalEstimatedExpenseLSS);
                             PressedBorderColor: =
                             Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
                             Text: ="Additional expenses required"
@@ -1271,8 +1275,12 @@ LeadSummaryScreen As screen:
                             Font: =Font.Arial
                             HoverBorderColor: =
                             HoverColor: =RGBA(0, 0, 0, 1)
-                            OnCheck: =Set(VarTravelSummary,cboxTravelRequiredLSS.Value)
-                            OnUncheck: =Set(VarTravelSummary,cboxTravelRequiredLSS.Value)
+                            OnCheck: |-
+                                =Set(VarTravelSummary,cboxTravelRequiredLSS.Value);
+                                Set(VarTravel,true);Reset(IntxtTotalEstimatedHoursofTravel);
+                            OnUncheck: |-
+                                =Set(VarTravelSummary,cboxTravelRequiredLSS.Value);
+                                Set(VarTravel,false);Reset(IntxtTotalEstimatedHoursofTravel);
                             PressedBorderColor: =
                             Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
                             Text: ="Travel required"
@@ -1368,7 +1376,7 @@ LeadSummaryScreen As screen:
                             BorderColor: =RGBA(237, 237, 237, 1)
                             Fill: =RGBA(237, 237, 237, 1)
                             Height: =Parent.Height
-                            Width: =Parent.Width-20
+                            Width: =Parent.Width-60
                             X: =30
                             ZIndex: =1
 
@@ -1460,11 +1468,13 @@ LeadSummaryScreen As screen:
                         ZIndex: =1
 
                         borderCustomerContactLSS As rectangle:
-                            BorderColor: =RGBA(237, 237, 237, 1)
+                            BorderColor: =RGBA(116, 116, 116, 1)
+                            BorderThickness: =1
                             Fill: =RGBA(237, 237, 237, 1)
-                            Height: =Parent.Height
-                            Width: =Parent.Width-20
+                            Height: =Parent.Height/1.04
+                            Width: =Parent.Width-60
                             X: =30
+                            Y: =5
                             ZIndex: =1
 
                         lblCustomerContactLSS As label:
@@ -1561,6 +1571,169 @@ LeadSummaryScreen As screen:
                             X: =50
                             Y: =IntxtContactNumberLSS.Y
                             ZIndex: =6
+
+                    TotalEstimatedExpenseLSS As typedDataCard.textualEditCard:
+                        BorderStyle: =BorderStyle.Solid
+                        DataField: ="shlrf_totalestimatedexpense"
+                        Default: =ThisItem.TotalEstimatedExpense
+                        DisplayMode: =Parent.DisplayMode
+                        DisplayName: =DataSourceInfo([@LeadInformations],DataSourceInfo.DisplayName,"shlrf_totalestimatedexpense")
+                        Fill: =RGBA(0, 0, 0, 0)
+                        Height: =50
+                        MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength, "shlrf_totalestimatedexpense")
+                        Required: =false
+                        Update: =IntxtTotalEstimatedExpenseLSS.Text
+                        Visible: =VarAdditionExpense
+                        Width: =Parent.Width
+                        X: =0
+                        Y: =17
+                        ZIndex: =1
+
+                        lblTotalEstimatedExpenseLSS As label:
+                            AutoHeight: =true
+                            Font: =Font.Arial
+                            Height: =34
+                            Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
+                            Text: ="Total estimated expense"
+                            Tooltip: ="Total estimated expense"
+                            Width: =Parent.Width - 120
+                            Wrap: =false
+                            X: =30
+                            Y: =10
+                            ZIndex: =1
+
+                        IntxtTotalEstimatedExpenseLSS As text:
+                            BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                            Default: =VarTotalEstimateExpenseSummary
+                            DelayOutput: =true
+                            DisplayMode: =Parent.DisplayMode
+                            Font: =Font.Arial
+                            MaxLength: =Parent.MaxLength
+                            PaddingLeft: =5
+                            RadiusBottomLeft: =0
+                            RadiusBottomRight: =0
+                            RadiusTopLeft: =0
+                            RadiusTopRight: =0
+                            Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
+                            Tooltip: =Parent.DisplayName
+                            Width: =Parent.Width - 120
+                            X: =30
+                            Y: =lblTotalEstimatedExpenseLSS.Y + lblTotalEstimatedExpenseLSS.Height + 5
+                            ZIndex: =2
+
+                        ErrorMessageTotalEstimatedExpenseLSS As label:
+                            AutoHeight: =true
+                            Height: =10
+                            Live: =Live.Assertive
+                            PaddingBottom: =0
+                            PaddingLeft: =0
+                            PaddingRight: =0
+                            PaddingTop: =0
+                            Text: =Parent.Error
+                            Visible: =Parent.DisplayMode=DisplayMode.Edit
+                            Width: =Parent.Width - 60
+                            X: =30
+                            Y: =IntxtTotalEstimatedExpenseLSS.Y + IntxtTotalEstimatedExpenseLSS.Height
+                            ZIndex: =3
+
+                        StarVisibleTotalEstimatedExpenseLSS As label:
+                            Align: =Align.Center
+                            Height: =lblTotalEstimatedExpenseLSS.Height
+                            Text: ="*"
+                            Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
+                            Width: =30
+                            Wrap: =false
+                            Y: =lblTotalEstimatedExpenseLSS.Y
+                            ZIndex: =4
+
+                        borderTotalExpenseLSS As rectangle:
+                            BorderColor: =RGBA(116, 116, 116, 1)
+                            BorderThickness: =1
+                            Fill: =RGBA(237, 237, 237, 1)
+                            Height: =Parent.Height/1.04
+                            Width: =Parent.Width-60
+                            X: =40
+                            ZIndex: =5
+
+                    TotalEstimatedHoursofTravelLSS As typedDataCard.textualEditCard:
+                        BorderStyle: =BorderStyle.Solid
+                        DataField: ="shlrf_totalestimatedhoursoftravel"
+                        Default: =ThisItem.TotalEstimatedHoursofTravel
+                        DisplayMode: =Parent.DisplayMode
+                        DisplayName: =DataSourceInfo([@LeadInformations],DataSourceInfo.DisplayName,"shlrf_totalestimatedhoursoftravel")
+                        Fill: =RGBA(0, 0, 0, 0)
+                        Height: =50
+                        MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength, "shlrf_totalestimatedhoursoftravel")
+                        Required: =false
+                        Update: =intxtTotalEstimatedHoursofTravelLSS.Text
+                        Visible: =VarTravel
+                        Width: =Parent.Width
+                        X: =0
+                        Y: =18
+                        ZIndex: =1
+
+                        lblTotalEstimatedHoursofTravelLSS As label:
+                            AutoHeight: =true
+                            Height: =34
+                            Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
+                            Text: =Parent.DisplayName
+                            Width: =Parent.Width - 120
+                            Wrap: =false
+                            X: =30
+                            Y: =10
+                            ZIndex: =1
+
+                        intxtTotalEstimatedHoursofTravelLSS As text:
+                            BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                            Default: =Parent.Default
+                            DelayOutput: =true
+                            DisplayMode: =Parent.DisplayMode
+                            MaxLength: =Parent.MaxLength
+                            PaddingLeft: =5
+                            RadiusBottomLeft: =0
+                            RadiusBottomRight: =0
+                            RadiusTopLeft: =0
+                            RadiusTopRight: =0
+                            Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
+                            Tooltip: =Parent.DisplayName
+                            Width: =Parent.Width - 120
+                            X: =30
+                            Y: =lblTotalEstimatedHoursofTravelLSS.Y + lblTotalEstimatedHoursofTravelLSS.Height + 5
+                            ZIndex: =2
+
+                        ErrorMessageTotalEstimatedHoursofTravelLSS As label:
+                            AutoHeight: =true
+                            Height: =10
+                            Live: =Live.Assertive
+                            PaddingBottom: =0
+                            PaddingLeft: =0
+                            PaddingRight: =0
+                            PaddingTop: =0
+                            Text: =Parent.Error
+                            Visible: =Parent.DisplayMode=DisplayMode.Edit
+                            Width: =Parent.Width - 60
+                            X: =30
+                            Y: =intxtTotalEstimatedHoursofTravelLSS.Y + intxtTotalEstimatedHoursofTravelLSS.Height
+                            ZIndex: =3
+
+                        StarVisibleTotalEstimatedHoursofTravelLSS As label:
+                            Align: =Align.Center
+                            Height: =lblTotalEstimatedHoursofTravelLSS.Height
+                            Text: ="*"
+                            Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
+                            Width: =30
+                            Wrap: =false
+                            Y: =lblTotalEstimatedHoursofTravelLSS.Y
+                            ZIndex: =4
+
+                        borderTotalEstimatedHoursTravelLSS As rectangle:
+                            BorderColor: =RGBA(116, 116, 116, 1)
+                            BorderThickness: =1
+                            Fill: =RGBA(237, 237, 237, 1)
+                            Height: =Parent.Height/1.04
+                            Width: =Parent.Width-60
+                            X: =40
+                            ZIndex: =5
 
                 "glryImageLSS As gallery.'BrowseLayout_Vertical_OneImageTwoColumnVariant_ver5.0'":
                     AlignInContainer: =AlignInContainer.SetByContainer
