--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -929,6 +929,8 @@ DashboardScreen As screen:
                         Set(VarCommunicationSummary,Blank());
                         Set(VarCustomerNameSummary,Blank());
                         Set(VarformattedNumberSummary,Blank());
+                        Set(VarTotalEstimateExpenseSummary,Blank());
+                        Set(VarTotalEstimateHoursofTravelSummary,Blank());
                         Clear(LeadImagesCollection);
                         Set(VarcontractRecord,Blank());
                         Set(VarformattedNumber,Blank());
