--- a/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
@@ -816,7 +816,7 @@ EstimateScreen As screen:
 
                     IntxtTotalEstimatedExpense As text:
                         BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
-                        Default: =Parent.Default
+                        Default: =VarTotalEstimateExpenseSummary
                         DelayOutput: =true
                         DisabledColor: =RGBA(0, 0, 0, 1)
                         DisplayMode: =Parent.DisplayMode
@@ -869,6 +869,103 @@ EstimateScreen As screen:
                         Wrap: =false
                         X: =30
                         Y: =lblTotalEstimatedExpense.Y
+                        ZIndex: =5
+
+                TotalEstimatedHoursofTravelES As typedDataCard.textualEditCard:
+                    BorderColor: =RGBA(202, 202, 202, 1)
+                    BorderStyle: =BorderStyle.Solid
+                    DataField: ="shlrf_totalestimatedhoursoftravel"
+                    Default: =ThisItem.TotalEstimatedHoursofTravel
+                    DisplayMode: =Parent.DisplayMode
+                    DisplayName: =DataSourceInfo([@LeadInformations],DataSourceInfo.DisplayName,"shlrf_totalestimatedhoursoftravel")
+                    Fill: =RGBA(255, 255, 255, 1)
+                    Height: =50
+                    MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength, "shlrf_totalestimatedhoursoftravel")
+                    Required: =false
+                    Update: =IntxtTotalEstimatedHoursofTravel.Text
+                    Visible: =VarTravel
+                    Width: =Parent.Width
+                    X: =0
+                    Y: =6
+                    ZIndex: =1
+
+                    borderCustomerContactES_2 As rectangle:
+                        BorderColor: =RGBA(116, 116, 116, 1)
+                        BorderThickness: =1
+                        Fill: =RGBA(237, 237, 237, 1)
+                        Height: =Parent.Height
+                        Width: =Parent.Width-60
+                        X: =30
+                        ZIndex: =1
+
+                    lblTotalEstimatedHoursofTravel As label:
+                        AutoHeight: =true
+                        Color: =RGBA(0, 0, 0, 1)
+                        DisabledColor: =RGBA(0, 0, 0, 1)
+                        Font: =Font.Arial
+                        Height: =34
+                        Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
+                        Text: ="Total estimated hours of travel"
+                        Width: =Parent.Width - 120
+                        X: =60
+                        Y: =10
+                        ZIndex: =2
+
+                    IntxtTotalEstimatedHoursofTravel As text:
+                        BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                        Default: =VarTotalEstimateHoursofTravelSummary
+                        DelayOutput: =true
+                        DisabledColor: =RGBA(0, 0, 0, 1)
+                        DisplayMode: =Parent.DisplayMode
+                        Font: =Font.Arial
+                        Format: =TextFormat.Number
+                        HintText: ="Total estimated hours of travel"
+                        HoverBorderColor: =RGBA(149, 149, 149, 1)
+                        HoverFill: =RGBA(255, 255, 255, 1)
+                        MaxLength: =3
+                        OnChange: =Set(VarTotalEstimateHoursofTravelSummary,IntxtTotalEstimatedHoursofTravel.Text)
+                        PaddingLeft: =5
+                        RadiusBottomLeft: =0
+                        RadiusBottomRight: =0
+                        RadiusTopLeft: =0
+                        RadiusTopRight: =0
+                        Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
+                        Tooltip: ="Total estimated hours of travel"
+                        Width: =Parent.Width - 120
+                        X: =60
+                        Y: =lblTotalEstimatedHoursofTravel.Y + lblTotalEstimatedHoursofTravel.Height + 5
+                        ZIndex: =3
+
+                    ErrorMessageTotalEstimatedHoursofTravel As label:
+                        AutoHeight: =true
+                        Height: =10
+                        Live: =Live.Assertive
+                        PaddingBottom: =0
+                        PaddingLeft: =0
+                        PaddingRight: =0
+                        PaddingTop: =0
+                        Text: =Parent.Error
+                        Visible: =Parent.DisplayMode=DisplayMode.Edit
+                        Width: =Parent.Width - 60
+                        X: =30
+                        Y: =IntxtTotalEstimatedHoursofTravel.Y + IntxtTotalEstimatedHoursofTravel.Height
+                        ZIndex: =4
+
+                    StarVisibleTotalEstimatedHoursofTravel As label:
+                        Align: =Align.Center
+                        Color: =RGBA(255, 0, 0, 1)
+                        Font: =Font.Arial
+                        Height: =lblTotalEstimatedHoursofTravel.Height
+                        Size: =21
+                        Text: ="*"
+                        VerticalAlign: =VerticalAlign.Top
+                        Visible: |-
+                            =//And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
+                            true
+                        Width: =30
+                        Wrap: =false
+                        X: =30
+                        Y: =lblTotalEstimatedHoursofTravel.Y
                         ZIndex: =5
 
                 CommunicatedtoCustomer As typedDataCard.comboBoxOptionSetSingleEditCard:
@@ -933,103 +1030,6 @@ EstimateScreen As screen:
                         Text: ="Communicated to customer"
                         Width: =Parent.Width-50
                         X: =30
-                        ZIndex: =5
-
-                TotalEstimatedHoursofTravelES As typedDataCard.textualEditCard:
-                    BorderColor: =RGBA(202, 202, 202, 1)
-                    BorderStyle: =BorderStyle.Solid
-                    DataField: ="shlrf_totalestimatedhoursoftravel"
-                    Default: =ThisItem.TotalEstimatedHoursofTravel
-                    DisplayMode: =Parent.DisplayMode
-                    DisplayName: =DataSourceInfo([@LeadInformations],DataSourceInfo.DisplayName,"shlrf_totalestimatedhoursoftravel")
-                    Fill: =RGBA(255, 255, 255, 1)
-                    Height: =50
-                    MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength, "shlrf_totalestimatedhoursoftravel")
-                    Required: =false
-                    Update: =IntxtTotalEstimatedHoursofTravel.Text
-                    Visible: =VarTravel
-                    Width: =Parent.Width
-                    X: =0
-                    Y: =6
-                    ZIndex: =1
-
-                    borderCustomerContactES_2 As rectangle:
-                        BorderColor: =RGBA(116, 116, 116, 1)
-                        BorderThickness: =1
-                        Fill: =RGBA(237, 237, 237, 1)
-                        Height: =Parent.Height
-                        Width: =Parent.Width-60
-                        X: =30
-                        ZIndex: =1
-
-                    lblTotalEstimatedHoursofTravel As label:
-                        AutoHeight: =true
-                        Color: =RGBA(0, 0, 0, 1)
-                        DisabledColor: =RGBA(0, 0, 0, 1)
-                        Font: =Font.Arial
-                        Height: =34
-                        Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                        Text: ="Total estimated hours of travel"
-                        Width: =Parent.Width - 120
-                        X: =60
-                        Y: =10
-                        ZIndex: =2
-
-                    IntxtTotalEstimatedHoursofTravel As text:
-                        BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
-                        Default: =Parent.Default
-                        DelayOutput: =true
-                        DisabledColor: =RGBA(0, 0, 0, 1)
-                        DisplayMode: =Parent.DisplayMode
-                        Font: =Font.Arial
-                        Format: =TextFormat.Number
-                        HintText: ="Total estimated hours of travel"
-                        HoverBorderColor: =RGBA(149, 149, 149, 1)
-                        HoverFill: =RGBA(255, 255, 255, 1)
-                        MaxLength: =3
-                        OnChange: =Set(VarTotalEstimateHoursofTravelSummary,IntxtTotalEstimatedHoursofTravel.Text)
-                        PaddingLeft: =5
-                        RadiusBottomLeft: =0
-                        RadiusBottomRight: =0
-                        RadiusTopLeft: =0
-                        RadiusTopRight: =0
-                        Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                        Tooltip: ="Total estimated hours of travel"
-                        Width: =Parent.Width - 120
-                        X: =60
-                        Y: =lblTotalEstimatedHoursofTravel.Y + lblTotalEstimatedHoursofTravel.Height + 5
-                        ZIndex: =3
-
-                    ErrorMessageTotalEstimatedHoursofTravel As label:
-                        AutoHeight: =true
-                        Height: =10
-                        Live: =Live.Assertive
-                        PaddingBottom: =0
-                        PaddingLeft: =0
-                        PaddingRight: =0
-                        PaddingTop: =0
-                        Text: =Parent.Error
-                        Visible: =Parent.DisplayMode=DisplayMode.Edit
-                        Width: =Parent.Width - 60
-                        X: =30
-                        Y: =IntxtTotalEstimatedHoursofTravel.Y + IntxtTotalEstimatedHoursofTravel.Height
-                        ZIndex: =4
-
-                    StarVisibleTotalEstimatedHoursofTravel As label:
-                        Align: =Align.Center
-                        Color: =RGBA(255, 0, 0, 1)
-                        Font: =Font.Arial
-                        Height: =lblTotalEstimatedHoursofTravel.Height
-                        Size: =21
-                        Text: ="*"
-                        VerticalAlign: =VerticalAlign.Top
-                        Visible: |-
-                            =//And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
-                            true
-                        Width: =30
-                        Wrap: =false
-                        X: =30
-                        Y: =lblTotalEstimatedHoursofTravel.Y
                         ZIndex: =5
 
                 CustomerName As typedDataCard.textualEditCard:
