--- a/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
@@ -388,6 +388,7 @@ CreatLeadScreen As screen:
                 PaddingLeft: =40
                 PaddingTop: =20
                 Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
+                Visible: =false
                 Width: =Parent.Width
                 ZIndex: =2
 
