--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -165,7 +165,7 @@ LeadSummaryScreen As screen:
                 SummaryForm As form:
                     DataSource: =LeadInformations
                     FillPortions: =0
-                    Height: =ContractNumberLSS.Height+BuildingNameLSS.Height+ZipCodeLSS.Height+AddressLSS.Height+UnitCountLSS.Height+UnitDescriptionLSS.Height+ScopeLSS.Height+ScopeOfWorkLSS.Height+ManuallyScopeOfWorkLSS.Height+EstimatedHoursLSS.Height+NotesLSS.Height+UnitDownLSS.Height+AdditionalExpensesRequiredLSS.Height+TravelRequiredLSS.Height+CommunicatedtoCustomerLSS.Height+CustomerContactLSS.Height+CustomerNameLSS.Height+TotalEstimatedExpenseLSS.Height+TotalEstimatedHoursofTravelLSS.Height+50
+                    Height: =ContractNumberLSS.Height+BuildingNameLSS.Height+ZipCodeLSS.Height+AddressLSS.Height+UnitCountLSS.Height+UnitDescriptionLSS.Height+ScopeLSS.Height+ScopeOfWorkLSS.Height+ManuallyScopeOfWorkLSS.Height+EstimatedHoursLSS.Height+NotesLSS.Height+UnitDownLSS.Height+AdditionalExpensesRequiredLSS.Height+TravelRequiredLSS.Height+CommunicatedtoCustomerLSS.Height+CustomerContactLSS.Height+CustomerNameLSS.Height+TotalEstimatedExpenseLSS.Height+TotalEstimatedHoursofTravelLSS.Height+80
                     Item: =VarFormMode
                     LayoutMinHeight: =250
                     LayoutMinWidth: =Parent.Width
@@ -839,9 +839,7 @@ LeadSummaryScreen As screen:
                             PaddingTop: =15
                             Size: =21
                             Text: ="*"
-                            Visible: |-
-                                =//And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
-                                true
+                            Visible: =false
                             Width: =30
                             Wrap: =false
                             X: =5
@@ -1222,6 +1220,102 @@ LeadSummaryScreen As screen:
                             X: =40
                             ZIndex: =5
 
+                    TotalEstimatedExpenseLSS As typedDataCard.textualEditCard:
+                        BorderColor: =RGBA(202, 202, 202, 1)
+                        BorderStyle: =BorderStyle.Solid
+                        DataField: ="shlrf_totalestimatedexpense"
+                        Default: =ThisItem.TotalEstimatedExpense
+                        DisplayMode: =Parent.DisplayMode
+                        DisplayName: =DataSourceInfo([@LeadInformations],DataSourceInfo.DisplayName,"shlrf_totalestimatedexpense")
+                        Fill: =RGBA(0, 0, 0, 0)
+                        Height: =50
+                        MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength, "shlrf_totalestimatedexpense")
+                        Required: =false
+                        Update: =IntxtTotalEstimatedExpenseLSS.Text
+                        Visible: =VarAdditionExpense
+                        Width: =Parent.Width
+                        X: =0
+                        Y: =13
+                        ZIndex: =1
+
+                        borderTotalExpenseLSS As rectangle:
+                            BorderColor: =RGBA(116, 116, 116, 1)
+                            BorderThickness: =1
+                            Fill: =RGBA(237, 237, 237, 1)
+                            Height: =Parent.Height
+                            Width: =Parent.Width-80
+                            X: =50
+                            ZIndex: =1
+
+                        lblTotalEstimatedExpenseLSS As label:
+                            AutoHeight: =true
+                            Color: =RGBA(0, 0, 0, 1)
+                            Font: =Font.Arial
+                            Height: =34
+                            Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
+                            Text: ="Total estimated expense"
+                            Tooltip: ="Total estimated expense"
+                            Width: =Parent.Width - 120
+                            Wrap: =false
+                            X: =70
+                            Y: =10
+                            ZIndex: =2
+
+                        IntxtTotalEstimatedExpenseLSS As text:
+                            BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                            Default: =VarTotalEstimateExpenseSummary
+                            DelayOutput: =true
+                            DisplayMode: =Parent.DisplayMode
+                            Font: =Font.Arial
+                            Format: =TextFormat.Number
+                            HoverBorderColor: =RGBA(149, 149, 149, 1)
+                            HoverFill: =RGBA(255, 255, 255, 1)
+                            MaxLength: =Parent.MaxLength
+                            OnChange: =Set(VarTotalEstimateExpenseSummary,IntxtTotalEstimatedExpenseLSS.Text);
+                            PaddingLeft: =5
+                            RadiusBottomLeft: =0
+                            RadiusBottomRight: =0
+                            RadiusTopLeft: =0
+                            RadiusTopRight: =0
+                            Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
+                            Tooltip: =Parent.DisplayName
+                            Width: =Parent.Width - 120
+                            X: =70
+                            Y: =lblTotalEstimatedExpenseLSS.Y + lblTotalEstimatedExpenseLSS.Height + 5
+                            ZIndex: =3
+
+                        ErrorMessageTotalEstimatedExpenseLSS As label:
+                            AutoHeight: =true
+                            Height: =10
+                            Live: =Live.Assertive
+                            PaddingBottom: =0
+                            PaddingLeft: =0
+                            PaddingRight: =0
+                            PaddingTop: =0
+                            Text: =Parent.Error
+                            Visible: =Parent.DisplayMode=DisplayMode.Edit
+                            Width: =Parent.Width - 60
+                            X: =30
+                            Y: =IntxtTotalEstimatedExpenseLSS.Y + IntxtTotalEstimatedExpenseLSS.Height
+                            ZIndex: =4
+
+                        StarVisibleTotalEstimatedExpenseLSS As label:
+                            Align: =Align.Center
+                            Color: =RGBA(255, 0, 0, 1)
+                            Font: =Font.Arial
+                            Height: =lblTotalEstimatedExpenseLSS.Height
+                            Size: =21
+                            Text: ="*"
+                            VerticalAlign: =VerticalAlign.Top
+                            Visible: |-
+                                =//And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
+                                true
+                            Width: =30
+                            Wrap: =false
+                            X: =50
+                            Y: =lblTotalEstimatedExpenseLSS.Y
+                            ZIndex: =5
+
                     TravelRequiredLSS As typedDataCard.comboBoxOptionSetSingleEditCard:
                         BorderColor: =RGBA(0, 0, 0, 0)
                         BorderStyle: =BorderStyle.Solid
@@ -1288,101 +1382,6 @@ LeadSummaryScreen As screen:
                             X: =40
                             ZIndex: =5
 
-                    TotalEstimatedExpenseLSS As typedDataCard.textualEditCard:
-                        BorderColor: =RGBA(202, 202, 202, 1)
-                        BorderStyle: =BorderStyle.Solid
-                        DataField: ="shlrf_totalestimatedexpense"
-                        Default: =ThisItem.TotalEstimatedExpense
-                        DisplayMode: =Parent.DisplayMode
-                        DisplayName: =DataSourceInfo([@LeadInformations],DataSourceInfo.DisplayName,"shlrf_totalestimatedexpense")
-                        Fill: =RGBA(0, 0, 0, 0)
-                        Height: =50
-                        MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength, "shlrf_totalestimatedexpense")
-                        Required: =false
-                        Update: =IntxtTotalEstimatedExpenseLSS.Text
-                        Visible: =VarAdditionExpense
-                        Width: =Parent.Width
-                        X: =0
-                        Y: =13
-                        ZIndex: =1
-
-                        borderTotalExpenseLSS As rectangle:
-                            BorderColor: =RGBA(116, 116, 116, 1)
-                            BorderThickness: =1
-                            Fill: =RGBA(237, 237, 237, 1)
-                            Height: =Parent.Height
-                            Width: =Parent.Width-80
-                            X: =50
-                            ZIndex: =1
-
-                        lblTotalEstimatedExpenseLSS As label:
-                            AutoHeight: =true
-                            Color: =RGBA(0, 0, 0, 1)
-                            Font: =Font.Arial
-                            Height: =34
-                            Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                            Text: ="Total estimated expense"
-                            Tooltip: ="Total estimated expense"
-                            Width: =Parent.Width - 120
-                            Wrap: =false
-                            X: =70
-                            Y: =10
-                            ZIndex: =2
-
-                        IntxtTotalEstimatedExpenseLSS As text:
-                            BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
-                            Default: =VarTotalEstimateExpenseSummary
-                            DelayOutput: =true
-                            DisplayMode: =Parent.DisplayMode
-                            Font: =Font.Arial
-                            Format: =TextFormat.Number
-                            HoverBorderColor: =RGBA(149, 149, 149, 1)
-                            HoverFill: =RGBA(255, 255, 255, 1)
-                            MaxLength: =Parent.MaxLength
-                            PaddingLeft: =5
-                            RadiusBottomLeft: =0
-                            RadiusBottomRight: =0
-                            RadiusTopLeft: =0
-                            RadiusTopRight: =0
-                            Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                            Tooltip: =Parent.DisplayName
-                            Width: =Parent.Width - 120
-                            X: =70
-                            Y: =lblTotalEstimatedExpenseLSS.Y + lblTotalEstimatedExpenseLSS.Height + 5
-                            ZIndex: =3
-
-                        ErrorMessageTotalEstimatedExpenseLSS As label:
-                            AutoHeight: =true
-                            Height: =10
-                            Live: =Live.Assertive
-                            PaddingBottom: =0
-                            PaddingLeft: =0
-                            PaddingRight: =0
-                            PaddingTop: =0
-                            Text: =Parent.Error
-                            Visible: =Parent.DisplayMode=DisplayMode.Edit
-                            Width: =Parent.Width - 60
-                            X: =30
-                            Y: =IntxtTotalEstimatedExpenseLSS.Y + IntxtTotalEstimatedExpenseLSS.Height
-                            ZIndex: =4
-
-                        StarVisibleTotalEstimatedExpenseLSS As label:
-                            Align: =Align.Center
-                            Color: =RGBA(255, 0, 0, 1)
-                            Font: =Font.Arial
-                            Height: =lblTotalEstimatedExpenseLSS.Height
-                            Size: =21
-                            Text: ="*"
-                            VerticalAlign: =VerticalAlign.Top
-                            Visible: |-
-                                =//And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
-                                true
-                            Width: =30
-                            Wrap: =false
-                            X: =50
-                            Y: =lblTotalEstimatedExpenseLSS.Y
-                            ZIndex: =5
-
                     TotalEstimatedHoursofTravelLSS As typedDataCard.textualEditCard:
                         BorderColor: =RGBA(202, 202, 202, 1)
                         BorderStyle: =BorderStyle.Solid
@@ -1434,6 +1433,7 @@ LeadSummaryScreen As screen:
                             HoverBorderColor: =RGBA(149, 149, 149, 1)
                             HoverFill: =RGBA(255, 255, 255, 1)
                             MaxLength: =3
+                            OnChange: =Set(VarTotalEstimateHoursofTravelSummary,intxtTotalEstimatedHoursofTravelLSS.Text)
                             PaddingLeft: =5
                             RadiusBottomLeft: =0
                             RadiusBottomRight: =0
@@ -1684,7 +1684,7 @@ LeadSummaryScreen As screen:
                             Width: =Parent.Width - 60
                             X: =30
                             Y: =IntxtContactNumberES_1.Y + IntxtContactNumberES_1.Height
-                            ZIndex: =3
+                            ZIndex: =2
 
                         StarVisibleContactNumberLSS As label:
                             Align: =Align.Center
@@ -1700,22 +1700,21 @@ LeadSummaryScreen As screen:
                             Width: =30
                             Wrap: =false
                             X: =50
-                            Y: =lblContactNumber_1.Y
-                            ZIndex: =4
+                            Y: =lblContactES_1.Y
+                            ZIndex: =3
 
                         lblContactES_1 As label:
                             AutoHeight: =true
                             Color: =RGBA(0, 0, 0, 1)
                             Font: =Font.Arial
                             Height: =34
-                            PaddingLeft: =0
                             Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
                             Text: ="Customer Phone Number"
                             Width: =Parent.Width - 120
                             Wrap: =false
                             X: =70
                             Y: =40
-                            ZIndex: =7
+                            ZIndex: =4
 
                         IntxtContactNumberES_1 As text:
                             BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
@@ -1745,7 +1744,7 @@ LeadSummaryScreen As screen:
                             Width: =Parent.Width - 120
                             X: =70
                             Y: =lblContactES_1.Y + lblContactES_1.Height + 5
-                            ZIndex: =8
+                            ZIndex: =5
 
                         lblContactNumber_1 As label:
                             BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
@@ -1757,12 +1756,12 @@ LeadSummaryScreen As screen:
                             Height: =IntxtContactNumberES_1.Height
                             OnSelect: =Set(varContactNumber,false);
                             Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                            Text: =If(IsBlank(IntxtContactNumberES_1),"",VarformattedNumberSummary)
+                            Text: =VarformattedNumberSummary
                             Visible: =varContactNumber
                             Width: =IntxtContactNumberES_1.Width
                             X: =IntxtContactNumberES_1.X
                             Y: =IntxtContactNumberES_1.Y
-                            ZIndex: =9
+                            ZIndex: =6
 
                 "glryImageLSS As gallery.'BrowseLayout_Vertical_OneImageTwoColumnVariant_ver5.0'":
                     AlignInContainer: =AlignInContainer.SetByContainer
@@ -1846,7 +1845,7 @@ LeadSummaryScreen As screen:
                     Fill: =RGBA(255, 0, 0, 1)
                     HoverFill: =Color.Red
                     OnSelect: |
-                        =If(IsBlank(IntxtUnitCountLSS.Text) ||IsBlank(IntxtUnitDescriptionLSS.Text)|| IsBlank(CboxScopeLSS) || IsBlank(CboxScopeofWorkLSS) || IsBlank(IntxtEstimatedHoursLSS.Text) ||IsBlank(IntxtNotesLSS.Text) ||If(CboxCCLSS.Value=true,IsBlank(IntxtCustomerNameLSS) || IsBlank(lblContactNumber_1)) || If(cboxAELSS.Value=true,IsBlank(IntxtTotalEstimatedExpenseLSS))||If(cboxTravelRequiredLSS.Value=true,IsBlank(intxtTotalEstimatedHoursofTravelLSS)) ,
+                        =If(IsBlank(IntxtUnitCountLSS.Text) ||IsBlank(IntxtUnitDescriptionLSS.Text)|| IsBlank(CboxScopeLSS) || IsBlank(CboxScopeofWorkLSS) || IsBlank(IntxtEstimatedHoursLSS.Text) ||IsBlank(IntxtNotesLSS.Text) ||If(CboxCCLSS.Value=true,IsBlank(IntxtCustomerNameLSS) || IsBlank(lblContactNumber_1) ||IsBlank(IntxtContactNumberES_1)) || If(cboxAELSS.Value=true,IsBlank(IntxtTotalEstimatedExpenseLSS))||If(cboxTravelRequiredLSS.Value=true,IsBlank(intxtTotalEstimatedHoursofTravelLSS)) ,
                         Set(VarErrorPopup,true),
                         Set(VarNotificationloding,true);
                         Set(VarNotification,true);
