--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -1845,7 +1845,7 @@ LeadSummaryScreen As screen:
                     Fill: =RGBA(255, 0, 0, 1)
                     HoverFill: =Color.Red
                     OnSelect: |
-                        =If(IsBlank(IntxtUnitCountLSS.Text) ||IsBlank(IntxtUnitDescriptionLSS.Text)|| IsBlank(CboxScopeLSS) || IsBlank(CboxScopeofWorkLSS) || IsBlank(IntxtEstimatedHoursLSS.Text) ||IsBlank(IntxtNotesLSS.Text) ||If(CboxCCLSS.Value=true,IsBlank(IntxtCustomerNameLSS) || IsBlank(lblContactNumber_1) ||IsBlank(IntxtContactNumberES_1)) || If(cboxAELSS.Value=true,IsBlank(IntxtTotalEstimatedExpenseLSS))||If(cboxTravelRequiredLSS.Value=true,IsBlank(intxtTotalEstimatedHoursofTravelLSS)) ,
+                        =If(IsBlank(IntxtUnitCountLSS.Text) ||IsBlank(IntxtUnitDescriptionLSS.Text)|| IsBlank(CboxScopeLSS)  || IsBlank(IntxtEstimatedHoursLSS.Text) ||IsBlank(IntxtNotesLSS.Text) ||If(CboxCCLSS.Value=true,IsBlank(IntxtCustomerNameLSS) || IsBlank(lblContactNumber_1) ||IsBlank(IntxtContactNumberES_1)) || If(cboxAELSS.Value=true,IsBlank(IntxtTotalEstimatedExpenseLSS))||If(cboxTravelRequiredLSS.Value=true,IsBlank(intxtTotalEstimatedHoursofTravelLSS)) ,
                         Set(VarErrorPopup,true),
                         Set(VarNotificationloding,true);
                         Set(VarNotification,true);
